@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - CGI::Tiny::Multipart::parse_multipart_form_data now takes a single tempfiles option instead of all_tempfiles and no_tempfiles
 
 0.017     2021-05-19 01:41:51 EDT
   - Split multipart/form-data parser into CGI::Tiny::Multipart module, which is reusable and only loaded if needed
